log
Tue 07 May 2024 02:55:50 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
0661abb
Tue 07 May 2024 03:06:47 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3c0bfb1
Tue 07 May 2024 03:08:16 AM UTC: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:79:75: error: expected ‘:’ before ‘}’ token
   79 |             aux = (tree->lower_than(key, aux->pair->key) == 1) ? aux->left
      |                                                                           ^
      |                                                                           :
   80 | 
   81 |         }
      |         ~                                                                  
Compilation failed
6c38f25
Tue 07 May 2024 03:08:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:79:17: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   79 |             aux = (tree->lower_than(key, aux->pair->key) == 1);
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
7150af0
Tue 07 May 2024 03:10:55 AM UTC: 
 treemap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  6|6
total_score: 5/70
15c188e
Tue 07 May 2024 03:13:54 AM UTC: 
 treemap.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
 tests:  0|0
eac1d43
Tue 07 May 2024 03:14:15 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:133:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  133 |     return;
      |     ^~~~~~
treemap.c:114:8: note: declared here
  114 | Pair * searchTreeMap(TreeMap * tree, void* key)
      |        ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
afa315f
Tue 07 May 2024 03:14:29 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 5/70
d836964
Tue 07 May 2024 03:21:18 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|6
total_score: 5/70
e5603fd
Tue 07 May 2024 03:22:48 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 15/70
56a981b
Tue 07 May 2024 03:26:16 AM UTC: 
 treemap.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  12|5
total_score: 15/70
ed58e03
Tue 07 May 2024 03:27:40 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:17: error: implicit declaration of function ‘isequal’; did you mean ‘is_equal’? [-Werror=implicit-function-declaration]
   61 |             if (isequal(tree, key, aux->pair->key)) return;
      |                 ^~~~~~~
      |                 is_equal
cc1: all warnings being treated as errors
Compilation failed
72c7694
Tue 07 May 2024 03:27:47 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 15/70
6898480
Tue 07 May 2024 03:28:43 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  15|4
total_score: 25/70
3be29a5
Tue 07 May 2024 03:35:36 AM UTC: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  0|0
fb07776
Tue 07 May 2024 03:36:24 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
dc56647
Tue 07 May 2024 03:37:32 AM UTC: 
 treemap.c | 15 ++-------------
 1 file changed, 2 insertions(+), 13 deletions(-)
 tests:  16|4
total_score: 30/70
a6d13c7
Tue 07 May 2024 03:58:49 AM UTC: 
 treemap.c | 28 ++++++++++++++++++++--------
 1 file changed, 20 insertions(+), 8 deletions(-)
 tests:  16|4
total_score: 30/70
434c43b
Tue 07 May 2024 03:59:12 AM UTC: 
 treemap.c | 28 +---------------------------
 1 file changed, 1 insertion(+), 27 deletions(-)
In file included from test.c:4:
treemap.c:108:5: error: expected identifier or ‘(’ before ‘return’
  108 |     return;
      |     ^~~~~~
treemap.c:109:1: error: expected identifier or ‘(’ before ‘}’ token
  109 | }
      | ^
Compilation failed
389e22e
Tue 07 May 2024 03:59:27 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  15|4
total_score: 25/70
4c64f75
Tue 07 May 2024 03:59:53 AM UTC: 
 treemap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
88fa813
Tue 07 May 2024 04:02:33 AM UTC: 
 treemap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  0|0
d6a1701
Tue 07 May 2024 04:03:41 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
967417b
Tue 07 May 2024 04:05:07 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  17|4
total_score: 35/70
c433750
Tue 07 May 2024 04:08:27 AM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 35/70
e59cbe7
